--- a/AHK/global_all_settings.ini
+++ b/AHK/global_all_settings.ini
@@ -18,7 +18,7 @@ more_paths_file=C:\cbn_gits\AHK\search_paths\more paths.txt
 search_shortcuts_file =C:\cbn_gits\opus\shortcuts\search shortcuts.txt
 recent_searches_file =C:\cbn_gits\AHK\search_paths\recent_searches.txt
 fav_folders1=C:\Users\<username>\Data-Analytics
-fav_folders2=C:\Users\<username>\Image-recognition
+fav_folders2=C:\Users\<username>\MMF
 fav_folders3=C:\Users\<username>\Image-recognition\SYNCED\Image_recognition
 fav_folders4=C:\Users\<username>\Downloads\Torrents
 
