--- a/AHK/global_all_settings.ini
+++ b/AHK/global_all_settings.ini
@@ -3,7 +3,7 @@ emacs=C:\cbn_gits\emacs\emacs-25.1-i686-w64-mingw32\bin\emacsclient.exe
 emacs_default_startup_file=C:\Users\<username>\Downloads\todo.org
 run_python=C:\cbn_gits\AHK\python.py
 nircmd_Folder=c:\cbn_gits\opus\apps\nircmd
-help_tips_file=C:\cbn_gits\AHK\help_tips.txt 
+help_tips_file=C:\cbn_gits\AHK\help_tips.txt,C:\cbn_gits\AHK\reminder.ahk
 npp_path=C:\Program Files (x86)\Notepad++\notepad++.exe
 sublime_text_path=C:\Program Files\Sublime Text 3\sublime_text.exe
 eclipse_path=C:\Users\<username>\Desktop\eclipse-java-luna-SR2-win32-x86_64\eclipse\eclipse.exe
@@ -17,8 +17,8 @@ more_paths_frequent_file=C:\cbn_gits\AHK\search_paths\more paths frequent.txt
 more_paths_file=C:\cbn_gits\AHK\search_paths\more paths.txt
 search_shortcuts_file =C:\cbn_gits\opus\shortcuts\search shortcuts.txt
 recent_searches_file =C:\cbn_gits\AHK\search_paths\recent_searches.txt
-fav_folders1=C:\Users\<username>\Data-Analytics
-fav_folders2=C:\Users\<username>\MMF
+fav_folders2=C:\Users\<username>\Data-Analytics
+fav_folders1=C:\Users\<username>\Box Sync\MMF
 fav_folders3=C:\Users\<username>\Image-recognition\SYNCED\Image_recognition
 fav_folders4=C:\Users\<username>\Downloads\Torrents
 
