--- a/AHK/global_all_settings.ini
+++ b/AHK/global_all_settings.ini
@@ -17,7 +17,7 @@ more_paths_frequent_file=C:\cbn_gits\AHK\search_paths\more paths frequent.txt
 more_paths_file=C:\cbn_gits\AHK\search_paths\more paths.txt
 search_shortcuts_file =C:\cbn_gits\opus\shortcuts\search shortcuts.txt
 recent_searches_file =C:\cbn_gits\AHK\search_paths\recent_searches.txt
-fav_folders2=C:\Users\<username>\Data-Analytics
+fav_folders2=C:\cbn_gits\AHK
 fav_folders1=C:\Users\<username>\Box Sync\MMF
 fav_folders3=C:\Users\<username>\Image-recognition\SYNCED\Image_recognition
 fav_folders4=C:\Users\<username>\Downloads\Torrents
