--- a/AHK/smart_search/searchlist.ini
+++ b/AHK/smart_search/searchlist.ini
@@ -1,5 +1,6 @@
-C:\Users\cibin\Desktop\all hotkeys.txt
-
+C:\Users\<username>\Desktop\all hotkeys.txt
+C:\Users\<username>\Downloads\notes.txt
+C:\Users\<username>\Downloads\work-notes.txt
 C:\cbn\others\contacts\ea.csv
 C:\cbn\others\contacts\ea other no.csv
 C:\cbn\others\contacts\others.txt
