--- a/AHK/smart_search/smart_search_keywords_lookup_files.ini
+++ b/AHK/smart_search/smart_search_keywords_lookup_files.ini
@@ -13,5 +13,5 @@ sel text=C:\cbn_gits\AHK\smart_search\sel text.txt
 sel text2=C:\cbn_gits\AHK\smart_search\sel text2.txt
 launcher=C:\cbn_gits\AHK\smart_search\db\start-menu.txt`nC:\cbn_gits\AHK\smart_search\db\05 god mode.txt`nC:\cbn_gits\AHK\smart_search\db\06 ahk.txt`nC:\cbn_gits\AHK\smart_search\db\07 START mENU.txt`nC:\cbn_gits\AHK\smart_search\db\a.txt`nC:\cbn_gits\AHK\smart_search\db\Clipboard Text.txt`nC:\cbn_gits\AHK\smart_search\db\commands.txt
 search_in_result=C:\cbn_gits\AHK\smart_search\search_in_result.txt
-searchInProject=C:\cbn_gits\AHK\frequentFolder.db
+searchInProject=C:\cbn_gits\AHK\searchInProject.db
 searchCommands=C:\cbn_gits\AHK\popular_commands.db
