--- a/AHK/global_all_settings.ini
+++ b/AHK/global_all_settings.ini
@@ -1,6 +1,7 @@
 [paths]
 emacs=C:\cbn_gits\emacs\emacs-25.1-i686-w64-mingw32\bin\emacsclient.exe
 emacs_default_startup_file=C:\Users\<username>\Downloads\todo.org
+emacs_default_startup_file2=C:\Users\<username>\Downloads\work-notes.org
 run_python=C:\cbn_gits\AHK\python.py
 nircmd_Folder=c:\cbn_gits\opus\apps\nircmd
 help_tips_file=C:\cbn_gits\AHK\help_tips.txt,C:\cbn_gits\AHK\reminder.ahk
