--- a/ported_files/cibin/.config/ranger/rc.conf
+++ b/ported_files/cibin/.config/ranger/rc.conf
@@ -1,2 +1,30 @@
 map gn fasd
-nautilus .
+map S shell bash -c "cd /bin/usr;bash;echo;ls"
+map S shell bash -c "cd %d;bash"
+map S shell bash
+
+map gs console shell bash -c "swap_filenames %s"
+
+map <A-j> eval fm.move(down=4)
+map <A-k> eval fm.move(up=4)
+#map f console -p35 shell bash -c "advgrep.sh rhere ahk %%s;bash"
+
+map s  console shell -w bash%space
+map A eval fm.open_console('shell advgrep.sh rhere ' + os.path.splitext(fm.thisfile.relative_path)[1][1:] + ' ')
+map A eval fm.open_console('shell advgrep.sh rhere ' + os.path.splitext(fm.thisfile.relative_path)[1][1:] + ' |vim -',prompt="Enter search command: ",position=24+len(os.path.splitext(fm.thisfile.relative_path)[1][1:]))
+set colorscheme snow
+
+# Automatically count files in the directory, even before entering them?
+set automatically_count_files false
+
+
+#map gd cd /cygdrive/c/Users/"$USERNAME"/Downloads
+#map gd eval fm.cd(ranger.RANGERDIR)
+map gdh eval import getpass; fm.cd('/cygdrive/c/Users/' + getpass.getuser())
+map gdd eval import getpass; fm.cd('/cygdrive/c/Users/' + getpass.getuser()+'/Downloads')
+map gde eval import getpass; fm.cd('/cygdrive/c/cygwin64/home' + getpass.getuser())
+
+#nautilus .
+
+commands.py:3:c
+commands.py:5:asdf adf
