--- a/ported_files/cibin/.config/ranger/rc.conf
+++ b/ported_files/cibin/.config/ranger/rc.conf
@@ -2,6 +2,11 @@ map gn fasd
 map S shell bash -c "cd /bin/usr;bash;echo;ls"
 map S shell bash -c "cd %d;bash"
 map S shell bash
+map ff console find%space
+map fj console filter%space
+map fa fzf_select
+map fc fzfcd
+map fs fzfsearch
 
 map gs console shell bash -c "swap_filenames %s"
 
@@ -26,5 +31,3 @@ map gde eval import getpass; fm.cd('/cygdrive/c/cygwin64/home' + getpass.getuser
 
 #nautilus .
 
-commands.py:3:c
-commands.py:5:asdf adf
