--- a/ported_files/cibin/.inputrc
+++ b/ported_files/cibin/.inputrc
@@ -1,3 +1,17 @@
+
+### MODE INDICATOR
+# https://gist.github.com/ethagnawl/86a0284c990196ae31b7
+# requires >= Bash 4.3
+# note: the prompt will not be updated if you use a custom PS1 which contains a newline character
+
+set editing-mode vi
+set keymap vi-command
+set show-mode-in-prompt on
+
+# if it's configured correctly, your prompt will be prefixed with a `+` while in insert mode and a `:` when in command mode.
+
+
+
 # To the extent possible under law, the author(s) have dedicated all 
 # copyright and related and neighboring rights to this software to the 
 # public domain worldwide. This software is distributed without any warranty. 
