--- a/ported_files/cibin/.config/ranger/rc.conf
+++ b/ported_files/cibin/.config/ranger/rc.conf
@@ -18,10 +18,16 @@ map s  console shell -w bash%space
 map A eval fm.open_console('shell advgrep.sh rhere ' + os.path.splitext(fm.thisfile.relative_path)[1][1:] + ' ')
 map A eval fm.open_console('shell advgrep.sh rhere ' + os.path.splitext(fm.thisfile.relative_path)[1][1:] + ' |vim -',prompt="Enter search command: ",position=24+len(os.path.splitext(fm.thisfile.relative_path)[1][1:]))
 set colorscheme snow
+# title bar
+set update_title true
 
 # Automatically count files in the directory, even before entering them?
 set automatically_count_files false
 
+set shorten_title 19
+#Trim the title of the window if it gets long?  The number defines
+#how many directories are displayed at once, False turns off this
+#feature.
 
 #map gd cd /cygdrive/c/Users/"$USERNAME"/Downloads
 #map gd eval fm.cd(ranger.RANGERDIR)
@@ -29,5 +35,34 @@ map gdh eval import getpass; fm.cd('/cygdrive/c/Users/' + getpass.getuser())
 map gdd eval import getpass; fm.cd('/cygdrive/c/Users/' + getpass.getuser()+'/Downloads')
 map gde eval import getpass; fm.cd('/cygdrive/c/cygwin64/home' + getpass.getuser())
 
+
+set preview_max_size 1000000
+# for windows 
+set open_all_images false
+
+
+# Disable displaying line numbers in main column
+set line_numbers true
+
+# Save tabs on exit
+set save_tabs_on_exit true
+
+# Enable scroll wrapping - moving down while on the last item will wrap around to
+# the top and vice versa.
+set wrap_scroll true
+ 
+map gl  move to=-1
 #nautilus .
 
+
+
+# ===================================================================
+# == Pager Keybindings
+# ===================================================================
+
+# Movement
+
+pmap  j      pager_move  down=2
+pmap  k        pager_move  up=2
+pmap  h        pager_close
+pmap E      edit_file
