--- a/ported_files/cibin/.config/ranger/rc.conf
+++ b/ported_files/cibin/.config/ranger/rc.conf
@@ -17,7 +17,7 @@ map <A-k> eval fm.move(up=4)
 map s  console shell -w bash%space
 map A eval fm.open_console('shell advgrep.sh rhere ' + os.path.splitext(fm.thisfile.relative_path)[1][1:] + ' ')
 map A eval fm.open_console('shell advgrep.sh rhere ' + os.path.splitext(fm.thisfile.relative_path)[1][1:] + ' |vim -',prompt="Enter search command: ",position=24+len(os.path.splitext(fm.thisfile.relative_path)[1][1:]))
-set colorscheme snow
+set colorscheme jungle
 # title bar
 set update_title true
 
@@ -33,7 +33,7 @@ set shorten_title 19
 #map gd eval fm.cd(ranger.RANGERDIR)
 map gdh eval import getpass; fm.cd('/cygdrive/c/Users/' + getpass.getuser())
 map gdd eval import getpass; fm.cd('/cygdrive/c/Users/' + getpass.getuser()+'/Downloads')
-map gde eval import getpass; fm.cd('/cygdrive/c/cygwin64/home' + getpass.getuser())
+map gde eval import getpass; fm.cd('/cygdrive/c/cygwin64/home/' + getpass.getuser())
 
 
 set preview_max_size 1000000
@@ -62,7 +62,10 @@ map gl  move to=-1
 
 # Movement
 
-pmap  j      pager_move  down=2
-pmap  k        pager_move  up=2
-pmap  h        pager_close
-pmap E      edit_file
+pmap j pager_move  down=2
+pmap k pager_move  up=2
+pmap h pager_close
+pmap E edit_file
+pmap n chain pager_close;move down=1;display_file
+pmap l chain pager_close;move up=1;display_file
+pmap p chain pager_close;move up=1;display_file
