--- a/ported_files/cibin/.config/ranger/rc.conf
+++ b/ported_files/cibin/.config/ranger/rc.conf
@@ -1,7 +1,9 @@
 map gn fasd
 map S shell bash -c "cd /bin/usr;bash;echo;ls"
 map S shell bash -c "cd %d;bash"
-map S shell bash
+map s shell bash 
+map S  console shell -w bash%space
+
 map ff console find%space
 map fj console filter%space
 map fa fzf_select
@@ -14,7 +16,6 @@ map <A-j> eval fm.move(down=4)
 map <A-k> eval fm.move(up=4)
 #map f console -p35 shell bash -c "advgrep.sh rhere ahk %%s;bash"
 
-map s  console shell -w bash%space
 map A eval fm.open_console('shell advgrep.sh rhere ' + os.path.splitext(fm.thisfile.relative_path)[1][1:] + ' ')
 map A eval fm.open_console('shell advgrep.sh rhere ' + os.path.splitext(fm.thisfile.relative_path)[1][1:] + ' |vim -',prompt="Enter search command: ",position=24+len(os.path.splitext(fm.thisfile.relative_path)[1][1:]))
 set colorscheme jungle
