--- a/AHK/global_all_settings.ini
+++ b/AHK/global_all_settings.ini
@@ -1,6 +1,6 @@
 [paths]
 emacs=C:\cbn_gits\emacs\emacs-25.1-i686-w64-mingw32\bin\emacsclient.exe
-emacs_default_startup_file=C:\Users\<username>\Downloads\todo.org
+emacs_default_startup_file=C:\Users\<username>\Downloads\todo-notes.org
 emacs_default_startup_file2=C:\Users\<username>\Downloads\work-notes.org
 run_python=C:\cbn_gits\AHK\python.py
 nircmd_Folder=c:\cbn_gits\opus\apps\nircmd
@@ -25,6 +25,6 @@ fav_folders4=C:\Users\<username>\Downloads\Torrents
 
 fav_file1=C:\users\<username>\downloads\todo.txt
 fav_file2=C:\users\<username>\downloads\work-todo.txt
-fav_file3=C:\users\<username>\downloads\todo.org
+fav_file3=C:\users\<username>\downloads\todo-notes.org
 fav_file4=C:\users\<username>\downloads\work-todo.txt
 
