--- a/ported_files/cibin/.config/ranger/rc.conf
+++ b/ported_files/cibin/.config/ranger/rc.conf
@@ -4,8 +4,10 @@ map S shell bash -c "cd %d;bash"
 map s shell bash 
 map S  console shell -w bash%space
 
+map oe shell bash -c "~/my-scripts/open_explorer.sh \"%p\""
+
 map ff console find%space
-map fj console filter%space
+map fj console scout -slpit%space 
 map fa fzf_select
 map fc fzfcd
 map fs fzfsearch
@@ -21,6 +23,7 @@ map A eval fm.open_console('shell advgrep.sh rhere ' + os.path.splitext(fm.thisf
 set colorscheme jungle
 # title bar
 set update_title true
+set sort_directories_first false
 
 # Automatically count files in the directory, even before entering them?
 set automatically_count_files false
@@ -70,3 +73,21 @@ pmap E edit_file
 pmap n chain pager_close;move down=1;display_file
 pmap l chain pager_close;move up=1;display_file
 pmap p chain pager_close;move up=1;display_file
+
+
+
+#If set to 'true', persistent filters would be cleared upon leaving the directory
+set clear_filters_on_dir_change true
+
+
+# ===================================================================
+# == Local Options
+# ===================================================================
+# You can set local options that only affect a single directory.
+
+# Examples:
+# setlocal path='/cygdrive/c/Users/' + getpass.getuser()+'/Downloads' sort mtime
+setlocal path=/cygdrive/c/Users/cibin/Downloads sort mtime
+setlocal path=/cygdrive/c/Users/212576716/Downloads sort mtime
+
+
