--- a/ported_files/cibin/.config/ranger/rc.conf
+++ b/ported_files/cibin/.config/ranger/rc.conf
@@ -4,13 +4,14 @@ map S shell bash -c "cd %d;bash"
 map s shell bash 
 map S  console shell -w bash%space
 
-map oe shell bash -c "~/my-scripts/open_explorer.sh \"%p\""
+map od shell bash -c "~/my-scripts/open_explorer.sh \"%p\""
 
 map ff console find%space
 map fj console scout -slpit%space 
 map fa fzf_select
 map fc fzfcd
 map fs fzfsearch
+
 
 map gs console shell bash -c "swap_filenames %s"
 
@@ -91,3 +92,4 @@ setlocal path=/cygdrive/c/Users/cibin/Downloads sort mtime
 setlocal path=/cygdrive/c/Users/212576716/Downloads sort mtime
 
 
+default_linemode devicons
