--- a/ported_files/cibin/.config/ranger/rc.conf
+++ b/ported_files/cibin/.config/ranger/rc.conf
@@ -5,7 +5,8 @@ map s shell bash
 map S  console shell -w bash%space
 
 map od shell bash -c "~/my-scripts/open_explorer.sh \"%p\""
-
+map os shell bash -c "~/my-scripts/sublime_text.sh \"$(~/my-scripts/convert_path_to_windows.sh \"%:p\"\")" 
+map oe shell bash -c "~/my-scripts/sublime_text.sh  \"%:p\"" 
 map ff console find%space
 map fj console scout -slpit%space 
 map fa fzf_select
@@ -38,6 +39,7 @@ set shorten_title 19
 #map gd eval fm.cd(ranger.RANGERDIR)
 map gdh eval import getpass; fm.cd('/cygdrive/c/Users/' + getpass.getuser())
 map gdd eval import getpass; fm.cd('/cygdrive/c/Users/' + getpass.getuser()+'/Downloads')
+map gdp eval import getpass; fm.cd('/cygdrive/c/Users/' + getpass.getuser()+'/Downloads/Projects')
 map gde eval import getpass; fm.cd('/cygdrive/c/cygwin64/home/' + getpass.getuser())
 
 
@@ -45,7 +47,8 @@ set preview_max_size 1000000
 # for windows 
 set open_all_images false
 
-
+map .     move_parent 1
+map ,     move_parent -1
 # Disable displaying line numbers in main column
 set line_numbers true
 
