few minor changes

--- a/.config/ranger/rc.conf
+++ b/.config/ranger/rc.conf
@@ -51,6 +51,7 @@ map gdd eval import getpass; fm.cd('/cygdrive/c/Users/' + getpass.getuser()+'/Do
 map gdp eval import getpass; fm.cd('/cygdrive/c/Users/' + getpass.getuser()+'/Downloads/Projects')
 map gde eval import getpass; fm.cd('/cygdrive/c/cygwin64/home/' + getpass.getuser())
 
+map gdf shell bash -c "git diff --name-only"
 
 set preview_max_size 1000000
 # for windows
