emacs and git terminal tig

--- a/.config/ranger/rc.conf
+++ b/.config/ranger/rc.conf
@@ -4,6 +4,10 @@ map S shell bash -c "cd %d;bash"
 map s shell bash
 map S  console shell -w bash%space
 
+
+map gt shell bash -c "tig"
+
+
 map od shell bash -c "~/my-scripts/open_explorer.sh \"%p\""
 map os shell bash -c "~/my-scripts/sublime_text.sh \"$(~/my-scripts/convert_path_to_windows.sh \"%:p\"\")"
 map oe shell bash -c "~/my-scripts/sublime_text.sh  \"%:p\""
