more emacs changes

--- a/.config/ranger/rc.conf
+++ b/.config/ranger/rc.conf
@@ -7,7 +7,8 @@ map S  console shell -w bash%space
 
 map gt shell bash -c "tig"
 
-
+# bind ot 's originals to something else
+map ot shell bash -c "echo \"%p\";tig -- %p"
 map od shell bash -c "~/my-scripts/open_explorer.sh \"%p\""
 map os shell bash -c "~/my-scripts/sublime_text.sh \"$(~/my-scripts/convert_path_to_windows.sh \"%:p\"\")"
 map oe shell bash -c "~/my-scripts/sublime_text.sh  \"%:p\""
