emacs, tmux, bash changes

--- a/.config/ranger/rc.conf
+++ b/.config/ranger/rc.conf
@@ -40,6 +40,8 @@ set colorscheme jungle
 # title bar
 set update_title true
 set sort_directories_first false
+# Set the title to "ranger" in the tmux program?
+set update_tmux_title false
 
 # Automatically count files in the directory, even before entering them?
 set automatically_count_files false
@@ -121,3 +123,12 @@ setlocal path=/cygdrive/c/Users/212576716/Downloads sort mtime
 
 # TODO try devicons
 #default_linemode devicons
+map <A-x><C-f> tab_new ~
+# Avoid previewing files larger than this size, in bytes.  Use a value of 0 to
+# disable this feature.
+set preview_max_size 0
+
+# Add the highlighted file to the path in the titlebar
+set show_selection_in_titlebar true
+# Set the title to "ranger" in the tmux program?
+# set update_tmux_title true
