--- a/.config/ranger/rc.conf
+++ b/.config/ranger/rc.conf
@@ -7,11 +7,12 @@ map S  console shell -w bash%space
 
 map gt shell bash -c "tig"
 
-# bind ot 's originals to something else
+# TODO bind ot 's originals to something else
 map ot shell bash -c "echo \"%p\";tig -- %p"
 map od shell bash -c "~/my-scripts/open_explorer.sh \"%p\""
 map os shell bash -c "~/my-scripts/sublime_text.sh \"$(~/my-scripts/convert_path_to_windows.sh \"%:p\"\")"
-map oe shell bash -c "~/my-scripts/sublime_text.sh  \"%:p\""
+map oe shell bash -c "ec %p"
+map ov shell bash -c "vim %p"
 map ff console find%space
 map fj console scout -slpit%space
 map fa fzf_select
@@ -132,3 +133,5 @@ set preview_max_size 0
 set show_selection_in_titlebar true
 # Set the title to "ranger" in the tmux program?
 # set update_tmux_title true
+# TODO make vcs aware toggleable to improve speed
+set vcs_aware true
