tmux ranger changes added

--- a/.config/ranger/rc.conf
+++ b/.config/ranger/rc.conf
@@ -4,13 +4,14 @@ map S shell bash -c "cd %d;bash"
 map s shell bash
 map S  console shell -w bash%space
 
+map gta shell bash -c "git add %p"
 
-map gt shell bash -c "tig"
+map gtt shell bash -c "tig"
 
 # TODO bind ot 's originals to something else
 map ot shell bash -c "echo \"%p\";tig -- %p"
 map od shell bash -c "~/my-scripts/open_explorer.sh \"%p\""
-map os shell bash -c "~/my-scripts/sublime_text.sh \"$(~/my-scripts/convert_path_to_windows.sh \"%:p\"\")"
+map os shell bash -c "~/my-scripts/sublime_text.sh %p"
 map oe shell bash -c "ec %p"
 map ov shell bash -c "vim %p"
 map ff console find%space
@@ -18,7 +19,9 @@ map fj console scout -slpit%space
 map fa fzf_select
 map fc fzfcd
 map fs fzfsearch
-
+map <C-f> fzf_select
+map <A-s>h fzf_ag_here
+map <A-s>r fzf_select
 # " move to a directory (prompt)
 map gp console -p15 shell mkdir -p ; mv %%s $_
 
@@ -54,10 +57,10 @@ set shorten_title 19
 
 #map gd cd /cygdrive/c/Users/"$USERNAME"/Downloads
 #map gd eval fm.cd(ranger.RANGERDIR)
-map gdh eval import getpass; fm.cd('/cygdrive/c/Users/' + getpass.getuser())
-map gdd eval import getpass; fm.cd('/cygdrive/c/Users/' + getpass.getuser()+'/Downloads')
-map gdp eval import getpass; fm.cd('/cygdrive/c/Users/' + getpass.getuser()+'/Downloads/Projects')
-map gde eval import getpass; fm.cd('/cygdrive/c/cygwin64/home/' + getpass.getuser())
+map gdh eval import getpass,platform; fm.cd('/cygdrive/c/Users/' + getpass.getuser() if platform.system().startswith('CYGWIN') else '/home/' + getpass.getuser())
+map gdd eval import getpass,platform; fm.cd('/cygdrive/c/Users/' + getpass.getuser() + '/Downloads'if platform.system().startswith('CYGWIN') else '/home/' + getpass.getuser() +'/Downloads')
+map gdp eval import getpass,platform; fm.cd('/cygdrive/c/Users/' + getpass.getuser() + '/Download/Projects' if platform.system().startswith('CYGWIN') else '/home/' + getpass.getuser() +'/Downloads/Projects')
+map gde eval import getpass,platform; fm.cd('/cygdrive/c/cygwin64/home/' + getpass.getuser() if platform.system().startswith('CYGWIN') else '/home/' + getpass.getuser())
 
 map gdf shell bash -c "git diff --name-only"
 
@@ -133,5 +136,5 @@ set preview_max_size 0
 set show_selection_in_titlebar true
 # Set the title to "ranger" in the tmux program?
 # set update_tmux_title true
-# TODO make vcs aware toggleable to improve speed
+# TODO make vcs aware toggleable to improve speed (enable only for certain paths https://github.com/ranger/ranger/wiki/VCS-integration)
 set vcs_aware true
