--- a/.config/ranger/rc.conf
+++ b/.config/ranger/rc.conf
@@ -10,9 +10,12 @@ map gtt shell bash -c "tig"
 
 # TODO bind ot 's originals to something else
 map ot shell bash -c "echo \"%p\";tig -- %p"
-map od shell bash -c "~/my-scripts/open_explorer.sh \"%p\""
+map od shell bash -c "~/my-scripts/open_explorer.sh %p"
 map os shell bash -c "~/my-scripts/sublime_text.sh %p"
-map oe shell bash -c "ec %p"
+
+# map oe shell bash -c "ec %p"
+map oe shell bash -c "activate_emacs %p"
+
 map ov shell bash -c "vim %p"
 map ff console find%space
 map fj console scout -slpit%space
@@ -138,3 +141,4 @@ set show_selection_in_titlebar true
 # set update_tmux_title true
 # TODO make vcs aware toggleable to improve speed (enable only for certain paths https://github.com/ranger/ranger/wiki/VCS-integration)
 set vcs_aware true
+map ef eval import shlex; fm.run("tmux splitw -h rifle " + fm.thisfile.basename)
