--- a/.inputrc
+++ b/.inputrc
@@ -15,12 +15,12 @@ set show-mode-in-prompt on
 
 
 
-# To the extent possible under law, the author(s) have dedicated all 
-# copyright and related and neighboring rights to this software to the 
-# public domain worldwide. This software is distributed without any warranty. 
-# You should have received a copy of the CC0 Public Domain Dedication along 
-# with this software. 
-# If not, see <http://creativecommons.org/publicdomain/zero/1.0/>. 
+# To the extent possible under law, the author(s) have dedicated all
+# copyright and related and neighboring rights to this software to the
+# public domain worldwide. This software is distributed without any warranty.
+# You should have received a copy of the CC0 Public Domain Dedication along
+# with this software.
+# If not, see <http://creativecommons.org/publicdomain/zero/1.0/>.
 
 # base-files version 4.2-4
 
@@ -72,7 +72,7 @@ set show-mode-in-prompt on
 
   # Filename completion/expansion
   # set completion-ignore-case on
-  # set show-all-if-ambiguous on
+set show-all-if-ambiguous on
 
   # Expand homedir name
   #set expand-tilde on
