few changes and sublime files added

--- a/.config/ranger/rc.conf
+++ b/.config/ranger/rc.conf
@@ -149,5 +149,6 @@ set show_selection_in_titlebar true
 # set update_tmux_title true
 
 # TODO make vcs aware toggleable to improve speed (enable only for certain paths https://github.com/ranger/ranger/wiki/VCS-integration)
-set vcs_aware true
+set vcs_aware false
+map zg set vcs_aware!
 map ef eval import shlex; fm.run("tmux splitw -h rifle " + fm.thisfile.basename)
