some emacs and other changes

--- a/.config/ranger/rc.conf
+++ b/.config/ranger/rc.conf
@@ -22,17 +22,22 @@ map fj console scout -slpit%space
 map fa fzf_select
 map fc fzfcd
 map fs fzfsearch
+
 map <C-f> fzf_select
-map <C-x>f bash_select sf
-map <C-x>n bash_select snf
-map <C-x>N TODO snf in vim
-map <C-x>r bash_select srf
+
+map <A-l>f bash_select sf
+map <A-l>n bash_select snf
+map <A-l>N TODO snf in vim
+map <A-l>r bash_select srf
+
+
 map <A-s>h fzf_ag_here 0 1
 map <A-s>b fzf_ag_here 0 0
 map <A-s>B fzf_ag_here 1 0
 map <A-s>r fzf_ag_here 1 1
-map <A-s>a fzf_ag_here 1(TODO swiper this file)
+# map <A-s>a fzf_ag_here 1(TODO swiper this file)
 # map <A-s>r fzf_select
+
 # " move to a directory (prompt)
 map gp console -p15 shell mkdir -p ; mv %%s $_
 
