--- a/.tmux/.tmux.conf
+++ b/.tmux/.tmux.conf
@@ -39,7 +39,7 @@ setw -g automatic-rename on # rename window to reflect current program
 set -g renumber-windows on  # renumber windows when a window is closed
 
 set -g set-titles on                        # set terminal title
-set -g set-titles-string '#h ❐ #S ● #I #W'
+set -g set-titles-string 'TMUX #h ❐ #S ● #I #W'
 
 set -g display-panes-time 800 # slightly longer pane indicators display time
 set -g display-time 1000      # slightly longer status messages display time
@@ -1130,7 +1130,6 @@ set -g pane-active-border-fg colour51
 
 
 
-bind-key -n 'M-l' run "tmux split-window -p 40 'tmux send-keys -t #{pane_id} \"$(locate / | fzf -m | paste -sd\\ -)\"'"
 
 unbind r
 bind r source-file ~/.tmux.conf
@@ -1141,8 +1140,11 @@ bind r source-file ~/.tmux.conf
 # bind-key C-n swap-pane -s :+.top \; rotate-window -Ut :+
 # cycle thru panes with zoomed in
 bind -n -r F7 select-pane -t .+1 \;  resize-pane -Z
+# without zoomed in
+bind -n -r F6 select-pane -t .+1
 bind -n F8 next-window
 bind -n C-l next-window
+bind  C-l next-window
 
 # Enable mouse mode (tmux 2.1 and above)
 set -g mouse on
@@ -1171,3 +1173,7 @@ bind -n C-k run "(tmux display-message -p '#{pane_current_command}' | grep -iqE 
 bind -n C-l run "(tmux display-message -p '#{pane_current_command}' | grep -iqE '(^|\/)n?vim(diff)?$|emacs.*$' && tmux send-keys C-l) || tmux select-pane -R"
 
 bind -n M-e run "(wmctrl -a Emacs)"
+
+
+# todo remap as this conflicts with emacs
+# bind-key -n 'M-l' run "tmux split-window -p 40 'tmux send-keys -t #{pane_id} \"$(locate / | fzf -m | paste -sd\\ -)\"'"
